# project_3_tput

./: .gitignore
notebooks/: Usecases.ipynb
tput/: README.md  core.py  pyproject.toml
tput/tput/: __init__.py  report.py
tput/tput.egg-info/: PKG-INFO  SOURCES.txt
