[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tput"
version = "0.1.0"
description = "Automated DataFrame audit library for ML pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tput*"]